--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -853,8 +853,8 @@ They include operations modelled after Haskell's list library, such as
 As a simple example, consider the dot product of two vectors:
 %
 \begin{lstlisting}[style=haskell]
-  dotp :: Acc (Vector Float) -> Acc (Vector Float) -> Acc (Scalar Float)
-  dotp xs ys = fold (+) 0 (zipWith (*) xs ys)
+dotp :: Acc (Vector Float) -> Acc (Vector Float) -> Acc (Scalar Float)
+dotp xs ys = fold (+) 0 (zipWith (*) xs ys)
 \end{lstlisting}
 %
 The crucial difference to vanilla Haskell is the \code{Acc} type constructor
@@ -868,11 +868,11 @@ to yield the final, scalar result, wrapped into a singleton array. The type of
 \code{fold} is:
 %
 \begin{lstlisting}[style=haskell]
-  fold :: (Shape sh, Elt a)
-       => (Exp a -> Exp a -> Exp a)
-       -> Exp a
-       -> Acc (Array (sh:.Int) a)
-       -> Acc (Array sh a)
+fold :: (Shape sh, Elt a)
+     => (Exp a -> Exp a -> Exp a)
+     -> Exp a
+     -> Acc (Array (sh:.Int) a)
+     -> Acc (Array sh a)
 \end{lstlisting}
 %
 It uses a binary folding function operating on \emph{embedded scalar
@@ -1043,8 +1043,8 @@ level, the constructor \code{Z} is used to represent the shape of a rank-0 array
 and, and the infix operator \code{:.} to increase the rank by adding a new
 (innermost) dimension to the right of the shape.
 
-During code generation, we represent multidimensional shapes and indices as a
-\code{struct}:
+During code generation, the old version of Accelerate~\cite{Chakravarty:2011fr}
+represented multidimensional shapes and indices as a \code{struct}:
 %
 \begin{lstlisting}[style=cuda]
 typedef Int32                           Ix;
@@ -1055,18 +1055,9 @@ typedef struct { Ix a2,a1,a0; }         DIM3;
   (@*$\langle$ and so on $\rangle$*@)
 \end{lstlisting}
 %
-Note we have set the type of each component of the shape in C to a 32-bit
-integer, whereas indices in Haskell are represented using \code{Int}. Depending
-on the architecture of the host Haskell compiler, this int might be either 32-
-or 64-bits. This entails additional conversions when marshalling shapes from
-Haskell, but can result in higher performance code, because \CUDA\ devices are
-natively 32-bit processors incur a significant performance penalty when
-executing 64-bit arithmetic.
-
-As \CUDA\ supports the use of C++ features, such as templates and function
-overload, we simplify code generation by overloading functions which operate on
-indices for the various index types. That is, we have the following family of
-functions:
+This representation additionally came with a family of overloaded C functions
+for operating on shapes and indices, so that skeletons were not specialised to a
+particular dimensionality:
 %
 \begin{lstlisting}[style=cuda,mathescape]
 int  dim(DIM$n$ sh);                        // number of dimensions in a shape
@@ -1075,15 +1066,44 @@ Ix   toIndex(DIM$n$ sh, DIM$n$ ix);            // index into a linear row-major 
 DIM$n$ fromIndex(DIM$n$ sh, Ix ix);            // inverse of `toIndex'
 \end{lstlisting}
 
-The major advantage of this approach is that the \CUDA\ skeletons are ad-hoc
-polymorphic; i.e., we have a single skeleton that during \emph{instantiation} is
-specialised to a particular array element type and dimensionality.
+However, the new code generation method~\cite{CliftonEverest:2014vi} does not
+require the use of \code{struct}s to represent shapes or tuples. The new
+approach represents shapes by their individual components, and operations such
+as \code{toIndex} are implemented directly in the skeleton, rather than packing
+the shape components into a \code{struct} and then calling the family of
+overloaded functions. This is component-wise representation identical to the
+treatment of tuples, which are discussed in further detail below.
 
-That the underlying representation as a C \code{struct} is only relevant when
-accessing shape data that was marshalled as a parameter to the kernel, in which
-case field accessors must be generated. In all other circumstances however, the
-shape can be treated as a tuple structure. Tuples are explained in further
-detail below. \marginnote{tk: so why did we need the struct at all?}
+
+% Note we have set the type of each component of the shape in C to a 32-bit
+% integer, whereas indices in Haskell are represented using \code{Int}. Depending
+% on the architecture of the host Haskell compiler, this int might be either 32-
+% or 64-bits. This entails additional conversions when marshalling shapes from
+% Haskell, but can result in higher performance code, because \CUDA\ devices are
+% natively 32-bit processors incur a significant performance penalty when
+% executing 64-bit arithmetic.
+% 
+% As \CUDA\ supports the use of C++ features, such as templates and function
+% overload, we simplify code generation by overloading functions which operate on
+% indices for the various index types. That is, we have the following family of
+% functions:
+% %
+% \begin{lstlisting}[style=cuda,mathescape]
+% int  dim(DIM$n$ sh);                        // number of dimensions in a shape
+% int  size(DIM$n$ sh);                       // total number of elements in a shape
+% Ix   toIndex(DIM$n$ sh, DIM$n$ ix);            // index into a linear row-major format array
+% DIM$n$ fromIndex(DIM$n$ sh, Ix ix);            // inverse of `toIndex'
+% \end{lstlisting}
+% 
+% The major advantage of this approach is that the \CUDA\ skeletons are ad-hoc
+% polymorphic; i.e., we have a single skeleton that during \emph{instantiation} is
+% specialised to a particular array element type and dimensionality.
+% 
+% That the underlying representation as a C \code{struct} is only relevant when
+% accessing shape data that was marshalled as a parameter to the kernel, in which
+% case field accessors must be generated. In all other circumstances however, the
+% shape can be treated as a tuple structure. Tuples are explained in further
+% detail below.
 
 
 \endinput
